src/_static.mojo


# @always_inline
# fn surface_finish(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_finish", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_destroy(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_destroy", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_get_device(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> UnsafePointer[__CairoDeviceT, MutExternalOrigin]:
#     return external_call["cairo_surface_get_device", UnsafePointer[__CairoDeviceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_get_reference_count(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> c_uint:
#     return external_call["cairo_surface_get_reference_count", c_uint, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_status(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_surface_status", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface))

# @always_inline
# fn surface_get_type(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_surface_get_type", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_get_content(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_surface_get_content", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_write_to_png(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], filename: UnsafePointer[c_char, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_surface_write_to_png", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_char, MutExternalOrigin]](surface, filename))

# @always_inline
# fn surface_get_mime_data(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], mime_type: UnsafePointer[c_char, ImmutExternalOrigin], data: UnsafePointer[c_char, ImmutExternalOrigin], length: UnsafePointer[c_ulong, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_get_mime_data", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin], UnsafePointer[c_ulong, MutExternalOrigin]](surface, mime_type, data, length)

# @always_inline
# fn surface_supports_mime_type(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], mime_type: UnsafePointer[c_char, ImmutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_surface_supports_mime_type", cairo_bool_t, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](surface, mime_type)

# @always_inline
# fn surface_get_font_options(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], options: UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_get_font_options", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoFontOptionsT, MutExternalOrigin]](surface, options)

# @always_inline
# fn surface_flush(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_flush", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_mark_dirty(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_mark_dirty", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_mark_dirty_rectangle(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x: c_int, y: c_int, width: c_int, height: c_int) -> NoneType:
#     return external_call["cairo_surface_mark_dirty_rectangle", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_int, c_int, c_int, c_int](surface, x, y, width, height)

# @always_inline
# fn surface_set_device_scale(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x_scale: c_double, y_scale: c_double) -> NoneType:
#     return external_call["cairo_surface_set_device_scale", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_double, c_double](surface, x_scale, y_scale)

# @always_inline
# fn surface_get_device_scale(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x_scale: UnsafePointer[c_double, MutExternalOrigin], y_scale: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_get_device_scale", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](surface, x_scale, y_scale)

# @always_inline
# fn surface_set_device_offset(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x_offset: c_double, y_offset: c_double) -> NoneType:
#     return external_call["cairo_surface_set_device_offset", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_double, c_double](surface, x_offset, y_offset)

# @always_inline
# fn surface_get_device_offset(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x_offset: UnsafePointer[c_double, MutExternalOrigin], y_offset: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_get_device_offset", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](surface, x_offset, y_offset)

# @always_inline
# fn surface_set_fallback_resolution(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x_pixels_per_inch: c_double, y_pixels_per_inch: c_double) -> NoneType:
#     return external_call["cairo_surface_set_fallback_resolution", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_double, c_double](surface, x_pixels_per_inch, y_pixels_per_inch)

# @always_inline
# fn surface_get_fallback_resolution(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x_pixels_per_inch: UnsafePointer[c_double, MutExternalOrigin], y_pixels_per_inch: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_get_fallback_resolution", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](surface, x_pixels_per_inch, y_pixels_per_inch)

# @always_inline
# fn surface_copy_page(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_copy_page", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_show_page(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_show_page", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn surface_has_show_text_glyphs(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_surface_has_show_text_glyphs", cairo_bool_t, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn image_surface_create(format: cairo_format_t, width: c_int, height: c_int) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_image_surface_create", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_int, c_int, c_int](format.value, width, height)

# @always_inline
# fn format_stride_for_width(format: cairo_format_t, width: c_int) -> c_int:
#     return external_call["cairo_format_stride_for_width", c_int, c_int, c_int](format.value, width)

# @always_inline
# fn image_surface_create_for_data(data: UnsafePointer[c_char, MutExternalOrigin], format: cairo_format_t, width: c_int, height: c_int, stride: c_int) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_image_surface_create_for_data", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_char, MutExternalOrigin], c_int, c_int, c_int, c_int](data, format.value, width, height, stride)

# @always_inline
# fn image_surface_get_data(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> UnsafePointer[c_char, MutExternalOrigin]:
#     return external_call["cairo_image_surface_get_data", UnsafePointer[c_char, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn image_surface_get_format(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> cairo_format_t:
#     return CairoFormatT(external_call["cairo_image_surface_get_format", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface))

# @always_inline
# fn image_surface_get_width(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_image_surface_get_width", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn image_surface_get_height(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_image_surface_get_height", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn image_surface_get_stride(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_image_surface_get_stride", c_int, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)

# @always_inline
# fn image_surface_create_from_png(filename: UnsafePointer[c_char, ImmutExternalOrigin]) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_image_surface_create_from_png", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_char, ImmutExternalOrigin]](filename)

# @always_inline
# fn recording_surface_create(content: c_int, extents: UnsafePointer[__CairoRectangleT, ImmutExternalOrigin]) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_recording_surface_create", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_int, UnsafePointer[__CairoRectangleT, ImmutExternalOrigin]](content, extents)

# @always_inline
# fn recording_surface_ink_extents(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x0: UnsafePointer[c_double, MutExternalOrigin], y0: UnsafePointer[c_double, MutExternalOrigin], width: UnsafePointer[c_double, MutExternalOrigin], height: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_recording_surface_ink_extents", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](surface, x0, y0, width, height)

# @always_inline
# fn recording_surface_get_extents(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], extents: UnsafePointer[__CairoRectangleT, MutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_recording_surface_get_extents", cairo_bool_t, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoRectangleT, MutExternalOrigin]](surface, extents)

# @always_inline
# fn pattern_create_rgb(red: c_double, green: c_double, blue: c_double) -> UnsafePointer[__CairoPatternT, MutExternalOrigin]:
#     return external_call["cairo_pattern_create_rgb", UnsafePointer[__CairoPatternT, MutExternalOrigin], c_double, c_double, c_double](red, green, blue)
